Changed Prices from USD to INR

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="pricing-container">
     <div class="pricing-plan">
       <div class="plan-title">Basic</div>
-      <div class="plan-price">$9.99/month</div>
+      <div class="plan-price">₹1000/month</div>
       <ul class="plan-features">
         <li>✅ 10GB Storage</li>
         <li>✅ 1 User</li>
@@ -84,7 +84,7 @@
     </div>
     <div class="pricing-plan">
       <div class="plan-title">Standard</div>
-      <div class="plan-price">$19.99/month</div>
+      <div class="plan-price">₹2000/month</div>
       <ul class="plan-features">
         <li>✅ 50GB Storage</li>
         <li>✅ 5 Users</li>
@@ -94,7 +94,7 @@
     </div>
     <div class="pricing-plan">
       <div class="plan-title">Premium</div>
-      <div class="plan-price">$49.99/month</div>
+      <div class="plan-price">₹10000/month</div>
       <ul class="plan-features">
         <li>✅ 100GB Storage</li>
         <li>✅ 10 Users</li>
